k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudpulse
  labels:
    name: cloudpulse
